# Small-Compiler

./: CMakeLists.txt  README.md  compiler.cc  compiler.h  demo.cc  myfile.cpp
tests/: gonnaneck.txt  reeeTest.txt  retatest2.txt  testINPUT.txt
tests/MOAR TESTS/: f1.txt  f2.txt  if1.txt  if2.txt  if3.txt  if4.txt  if5.txt  if6.txt  if7.txt  khakhing.txt  pls.txt  s1.txt  s2.txt  s3.txt  weeny.txt
